--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -169,7 +169,17 @@
     "#### Setting Up Data\n",
     "- We realized that it would be best if we joined the box scores dataset with the game results dataset, so that we get more information and features for each game that we could build a model off of\n",
     "- Before merging, we still had a little cleaning we had to do in order to make sure that each dataset and the same features (in the same format) to merge on\n",
-    "- "
+    "- We inspected all of our data and decided which teams names were missing/incorrect and fixed/added them in a dataframe\n",
+    "- Most importantly, we created a function called `get_team_id` which pulled the team id from the team dataframe applied it to the box scores and game data dataframes to create new columns for the home id and the away id\n",
+    "    - This ensured that we had a common key to join the dataframes on\n",
+    "\n",
+    "#### Joining The Data\n",
+    "After the initial set up of the data was done, our next step was to join the box score dataset with the game data dataset. \n",
+    "- we used inner join, so we only got the games that were present in both datasets\n",
+    "- we joined, so that we had more variables for each game that we could train our model on\n",
+    "- we then dropped repeating columns and columns we knew we were not going to use to train (i.e. duplicate score columns, duplicate date columns, and duplicate team names)\n",
+    "- we then added a columns for the winning team (0 if the home team won, 1 if the away team won, and 2 if the game resulted in a tie)\n",
+    "- we also converted all the numeric / quantitative features that we will be using to integers and floats (to build the model)"
    ]
   },
   {
@@ -183,101 +193,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NFL Box Scores Visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "- Total Scores by Year\n",
     "    - Created this to see how the total scores have changed throughout the years\n",
     "\n",
     "![Total Scores by Year](../images/box_score_total_scores.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Mean Net Yards by Year\n",
-    "    - Created this to see how the mean net yards have changed throughout the years for the 9ers\n",
-    "\n",
-    "![Mean Net Yards by Year](../images/9ers_box_score.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Team Stats Visualizations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 9ers Performance Over Time\n",
-    "    - Shows the percentage / points per game over the seasons for the 9ers:\n",
-    "\n",
-    "![9ers Performance Over Time](../images/team_stats_9ers.png)\n",
-    "![9ers Performance Over Time](../images/team_stats_9ers_1.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Patriots Performance Over Time\n",
-    "    - Shows the percentage / points per game over the seasons for the Patriots\n",
-    "\n",
-    "![Patriots Performance Over Time](../images/team_stats_pats.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Chiefs Performance Over Time\n",
-    "    - Shows the percentage / points per game over the seasons for the Chiefs\n",
-    "\n",
-    "![Chiefs Performance Over Time](../images/team_stats_chiefs.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Distribution of Points Allowed Per Game\n",
-    "    - Can demonstrate the defensive strength of a team\n",
-    "\n",
-    "![Distribution of Points Allowed Per Game](../images/team_stats_distribution.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Team Comparison of Win-Loss Percent vs Points Scored Per Game\n",
-    "\n",
-    "![Team Comparison of Win-Loss Percent vs Points Scored Per Game](../images/team_stats_win_loss_percent.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- Offensive vs Defensive Performance\n",
-    "    - Relationship between points allowed and points scored for each team\n",
-    "\n",
-    "![Offensive vs Defensive Performance](../images/team_stats_off_def.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### NFL Game Data Visualizations"
    ]
   },
   {
@@ -303,6 +222,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We used these plots above to determine which variables we wanted to use to train our model. We found out that we should include various models to see which one would be the best to use. We came to this conclusion because we saw that there is an impact on the score when a team is home or away."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Machine Learning"
    ]
   },
@@ -310,57 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Setting up the Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The first step in our ML process was to process all the cleaned data.\n",
-    "- We inspected all of our data and decided which teams names were missing/incorrect and fixed/added them in a dataframe\n",
-    "- Most importantly, we created a function called `get_team_id` which pulled the team id from the team dataframe applied it to the box scores and game data dataframes\n",
-    "```python\n",
-    "# function to get team id from city/team name\n",
-    "def get_team_id(city):\n",
-    "    # find the team name \n",
-    "    for team in nfl_teams[\"team_name\"]:\n",
-    "        if city in team:\n",
-    "            return nfl_teams[nfl_teams[\"team_name\"] == team][\"team_id\"].values[0]\n",
-    "        elif city == \"NY Giants\":\n",
-    "            return \"NYG\"\n",
-    "        elif city == \"NY Jets\":\n",
-    "            return \"NYJ\"\n",
-    "        elif city == \"LA Rams\":\n",
-    "            return \"LAR\"\n",
-    "        elif city == \"LA Chargers\":\n",
-    "            return \"LAC\"\n",
-    "```\n",
-    "- This ensured that we had a common key to join the dataframes on"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Joining the Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "After the initial set up of the data was done, our next step was to join the box score dataset with the game data dataset. \n",
-    "- we used inner join, so we only got the games that were present in both datasets\n",
-    "- we joined, so that we had more variables for each game that we could train our model on\n",
-    "- we then dropped repeating columns and columns we knew we were not going to use to train (i.e. duplicate score columns, duplicate date columns, and duplicate team names)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Training Model(s)"
+    "## Explain Model"
    ]
   },
   {
@@ -374,30 +250,185 @@
     "    - For the scoring, we chose the negative mean squared error, since we wanted to minimize the error.\n",
     "    - We used 10 folds for the cross validation, but we intend to model folds vs error to see if we can get a better k value.\n",
     "\n",
-    "![KNN Regressor](./images/k.png)\n",
+    "![KNN Regressor](../images/k.png)\n",
     "\n",
     "- After getting the best k value of 10 with the manhattan distance metric as the best metric, we trained the model on the training data.\n",
     "- We then used the model to predict the outcome of the test data.\n",
     "- The predictions were float values, so we rounded them to the nearest integer.\n",
-    "    - From the predictions, the model predicted 340 results correctly out of 417 games."
+    "    - From the predictions, the model predicted 340 results correctly out of 417 games.\n",
+    "\n",
+    "We then realized that our model was more of an \"explaining\" model rather than a predicting model as we used in-game statistics to predict who won that game itself.\n",
+    "- this model would not work for predicting future games as we would need in-game statistics for those games (which we don't have as they are future games)\n",
+    "- so we worked on creating a new model using past games to predict a future game\n",
+    "\n",
+    "We can draw some conclusions from the \"explain\" model:\n",
+    "- Since using a team's net yards and time of possession \"explained\" 340 results out of 417 games correctly, it seems as though there is a correlation between a teams net yards, their time of possession, and if they win or not\n",
+    "    - It seems as though more net yards correlate with winning games\n",
+    "- However, it makes sense for the other results to not be \"explained\" properly as net yards and time of possession is only a small part of the game\n",
+    "    - One team may get more yards than the other team, but it does not matter if they are not able to score as consistently as the other team"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Unfinished Thoughts"
+    "## Predict Models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are some pending thoughts that we are still yet to add / are also confused on.\n",
-    "- The current model uses KNN and we are using the model to predict the winner which is technically a categorical variable. So, we will try and use the Nearest Classifier Model and see if that works better.\n",
-    "  - A change we are thinking for the KNN model is to use it to predict the scores for each individual team first and then use those predicted scores variables to predict the winner (we will then compare this with the other models).\n",
-    "- We also are thinking of trying out an ensemble model using our other models and compare the predictions to the other models themselves.\n",
-    "- CONFUSION: We will do more research regarding this, but as of now we are confused on how to predict future games / games that do not have the existing variables that we built the model on. In order to use the model to predict data, we have to have the same variables in the test data that the train data was trained with. However, future games do not have values for the variables we trained on (i.e. time of possession of each team or the net yards for each team)"
+    "### Training Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To effectively predict the winner of games and their scores, we decided to make a function that gets the last *n* games of each team and then uses those games to predict the outcome of the next game.\n",
+    "- ```get_last_n_games()``` as well as ```create_last_n_games_stats_df()``` were used to get the last *n* games of each team and then create a dataframe with the statistics of those games.\n",
+    "    - These functions were applied to our merged dataset to get the last n games of each team.\n",
+    "- Statistics that we deemed important in training out model were the scores, points allowed, time of possession, first downs, total plays, and average gain for each the home and away team."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN Regressor: Multi Output Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We decided to use a KNN Regressor as our model since we wanted to predict the scores of each team and then use those scores to predict the winner of the game.\n",
+    "- Our ```last_n_games_stats_df``` was our X.\n",
+    "    - These were split into training and testing sets.\n",
+    "- We used a multi output model to predict the scores of each team, so our model would be predicting 2 values.\n",
+    "- We used a column transformer to encode the categorical variables, which were the team ids.\n",
+    "    - Then we used a pipeline with a standard scaler and a KNN Regressor with 5 neighbors.\n",
+    "- To find the best k value, we used a grid search with cross validation.\n",
+    "    - For the scoring, we chose the negative mean squared error, since we wanted to minimize the error.\n",
+    "    - For the metrics, we used the manhattan distance and the euclidean distance.\n",
+    "    - We used 10 folds for the cross validation to get the best k value.\n",
+    "- Finally we predicted the scores of the test data and added them to the test data dataframe.\n",
+    "- We then used the predicted scores to predict the winner of the game.\n",
+    "    - At the end we calculated the amount of predictions that were correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### KNN Regressor: Home and Away Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To better understand the impact of being home or away, we decided to make a model that predicts the scores of each team separately.\n",
+    "- We used the same ```last_n_games_stats_df``` but split the features into home and away features.\n",
+    "    - We also split the target into home and away targets.\n",
+    "- The same methods were used such as column transformer and pipeline.\n",
+    "- However, there were 2 models that were fit and predicted on.\n",
+    "    - Each model would only predict the scores of the home team or the away team.\n",
+    "    - So each yielded CV errors and predictions.\n",
+    "- At the end, we combined the model's predictions and concatenated them to the test data dataframe.\n",
+    "- We then used the predicted scores to predict the winner of the game.\n",
+    "    - At the end we calculated the amount of predictions that were correct.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Regression Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- After making the KNN model, we wanted to compare it with a Linear Regression model to see if Linear Regression would be a better way to predict scores for the teams and who would win.\n",
+    "- We used the same ```last_n_games_stats_df``` for our X train and the game scores for the y train\n",
+    "- We used the same method for the column transformer (in order to encode the team ids) and used that with a new pipeline with a Linear Regression model instead.\n",
+    "  - We still used the Standard Scaler in order to scale the quantitative values as the features units and ranges are different\n",
+    "- We fit the model with the X train and then predicted the game scores.\n",
+    "  - we then used those predicted values to find our predicted winner for the game and calculated the amount of predictions that were correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Voting Ensemble Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- We decided to use a voting ensemble model to combine the predictions of the Linear Regression Model and the KNN Regressor: Multi Output Model to better predict the winner of the game.\n",
+    "- To do this, we used the ```VotingRegressor``` from sklearn, however we had to use ```MultiOutputRegressor``` since we are predicting 2 values.\n",
+    "- To get the best weight, we looped through a range of weights and then found the weight that yielded the best CV error.\n",
+    "- Then we used the best weight in a final model that would predict the scores of the test data.\n",
+    "- We then used the predicted scores to predict the winner of the game.\n",
+    "    - At the end we calculated the amount of predictions that were correct."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Metrics and Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- To better understand the results of our models, we calculated the cross validation error for each model.\n",
+    "    - We used the negative mean squared error as our scoring metric.\n",
+    "- In addition, we calculated the amount of predictions that were correct for each model as the accuracy metric.\n",
+    "- However, we wanted to understand the impact of the last *n* games on the accuracy and CV errors, and to see if changing n would improve our models.\n",
+    "    - To achieve this we created a function for each model that take in a dataframe and a train/test split.\n",
+    "    - Each of these functions train and test the model as we described above.\n",
+    "    - The only difference is that these functions would return 4 values: the model itself, the CV error, the number of predictions that were correct, and the total number of predictions.\n",
+    "- Using these functions, we looped through a range of *n* values (from 1 to 10) and then added the outputs into a dataframe.\n",
+    "    - We then decided to go with the best model that yielded the best CV error and accuracy, which was the **KNN Regressor: Multi Output Model**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predicting Model: **KNN Regressor Multi Output Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we found which model was the best (by testing out different n values and different regression models), we wanted to apply that to some current games to see if our model is still appropriate for the 2023 NFL Season.\n",
+    "\n",
+    "So, we tested our model against 2 games that took place on Sunday, Dec. 10, 2023: the 49ers vs Seahawks game and the Cowboys vs Eagles game.\n",
+    "\n",
+    "Since our best model uses averages from the previous 5 games for a team, we researched to find the stats we needed from each of the teams last 5 games, averaged the values out, and then added it to its own dataframe that we could use on model on.\n",
+    "\n",
+    "#### 49ers vs Seahawks Game\n",
+    "Here is a table of our predictions for score and the winner compared to actual score and the actual winner:\n",
+    "\n",
+    "| Team   | Predicted Score | Actual Score | Predicted Winner | Actual Winner |\n",
+    "|--------|-----------------|--------------|------------------|---------------|\n",
+    "| 49ers  |      24         |      21      |     49ers        |    49ers      |\n",
+    "| Seahawks|      20         |      24      |     49ers        |    Seahawks   |\n",
+    "\n",
+    "\n",
+    "#### Cowboys vs Eagles Game\n",
+    "Here is a table of our predictions for score and the winner compared to actual score and the actual winner:"
    ]
   }
  ],
