--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "We will use this data to answer the following research questions:\n",
     "- What are the factors that most affect the outcome of an American football game?\n",
-    "- How can data be used to predict the outcome of future games?\n",
+    "- How can data be used to predict the outcome of future games (scores and winners)?\n",
     "\n",
     "We believe that this project has the potential to make a significant contribution to the field of American football. We are excited to see what we can learn from the data.\n"
    ]
@@ -398,7 +398,11 @@
     "    - Each of these functions train and test the model as we described above.\n",
     "    - The only difference is that these functions would return 4 values: the model itself, the CV error, the number of predictions that were correct, and the total number of predictions.\n",
     "- Using these functions, we looped through a range of *n* values (from 1 to 10) and then added the outputs into a dataframe.\n",
-    "    - We then decided to go with the best model that yielded the best CV error and accuracy, which was the **KNN Regressor: Multi Output Model**."
+    "    - We then decided to go with the best model that yielded the best accuracy, which was the **KNN Regressor: Multi Output Model**.\n",
+    "\n",
+    "Here are the the 5 best and 5 worst configurations for our models in the final dataframe:\n",
+    "\n",
+    "![Best Model Configurations](../images/results_df.png)\n"
    ]
   },
   {
@@ -419,17 +423,38 @@
     "Since our best model uses averages from the previous 5 games for a team, we researched to find the stats we needed from each of the teams last 5 games, averaged the values out, and then added it to its own dataframe that we could use on model on.\n",
     "\n",
     "#### 49ers vs Seahawks Game\n",
-    "Here is a table of our predictions for score and the winner compared to actual score and the actual winner:\n",
+    "Here is a table of our predictions for score compared to actual score:\n",
     "\n",
-    "| Team   | Predicted Score | Actual Score | Predicted Winner | Actual Winner |\n",
-    "|--------|-----------------|--------------|------------------|---------------|\n",
-    "| 49ers  |      24         |      21      |     49ers        |    49ers      |\n",
-    "| Seahawks|      20         |      24      |     49ers        |    Seahawks   |\n",
+    "| Team   | Predicted Score | Actual Score |\n",
+    "|--------|-----------------|--------------|\n",
+    "| SF  |      22.82         |      28      |\n",
+    "| SEA |      17.58         |      16      |\n",
     "\n",
+    "Here is a table of our predicted winner compared to the actual winner:\n",
+    "\n",
+    "| Predicted Winner | Actual Winner |\n",
+    "|------------------|---------------|\n",
+    "| SF | SF |\n",
     "\n",
     "#### Cowboys vs Eagles Game\n",
-    "Here is a table of our predictions for score and the winner compared to actual score and the actual winner:"
+    "Here is a table of our predictions for score compared to actual score:\n",
+    "\n",
+    "| Team   | Predicted Score | Actual Score |\n",
+    "|--------|-----------------|--------------|\n",
+    "| DAL  |      27.06         |      TBD      |\n",
+    "| PHI |      24.68         |      TBD      |\n",
+    "\n",
+    "Here is a table of our predicted winner compared to the actual winner:\n",
+    "\n",
+    "| Predicted Winner | Actual Winner |\n",
+    "|------------------|---------------|\n",
+    "| DAL | TBD |"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
