--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -236,7 +236,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explain Model"
+    "### Explain Model"
    ]
   },
   {
@@ -272,14 +272,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Predict Models"
+    "### Predict Models"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training Models"
+    "#### Training Models"
    ]
   },
   {
@@ -296,7 +296,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### KNN Regressor: Multi Output Model"
+    "#### KNN Regressor: Multi Output Model"
    ]
   },
   {
@@ -322,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### KNN Regressor: Home and Away Model"
+    "#### KNN Regressor: Home and Away Model"
    ]
   },
   {
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Linear Regression Model"
+    "#### Linear Regression Model"
    ]
   },
   {
@@ -364,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Voting Ensemble Model"
+    "#### Voting Ensemble Model"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Metrics and Results"
+    "#### Metrics and Results"
    ]
   },
   {
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predicting Model: **KNN Regressor Multi Output Model**"
+    "#### Predicting Model: **KNN Regressor Multi Output Model**"
    ]
   },
   {
