--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -193,8 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Total Scores by Year\n",
-    "    - Created this to see how the total scores have changed throughout the years\n",
+    "- Total Scores by Year: created this to see how the total scores have changed throughout the years\n",
     "\n",
     "![Total Scores by Year](../images/box_score_total_scores.png)"
    ]
@@ -203,8 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Distribution of Scores\n",
-    "    - Shows the distribution of scores for home teams\n",
+    "- Distribution of Scores: shows the distribution of scores for home teams\n",
     "\n",
     "![Distribution of Scores](../images/game_data_dist_home.png)"
    ]
@@ -222,7 +220,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We used these plots above to determine which variables we wanted to use to train our model. We found out that we should include various models to see which one would be the best to use. We came to this conclusion because we saw that there is an impact on the score when a team is home or away."
+    "- We used these plots above to determine which variables we wanted to use to train our model. \n",
+    "- We found out that we should include various models to see which one would be the best to use. \n",
+    "- We came to this conclusion because we saw that there is an impact on the score when a team is home or away."
    ]
   },
   {
@@ -409,6 +409,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From these results, we can draw some conclusions:\n",
+    "- The best model was the **KNN Regressor: Multi Output Model** with a CV error of 9.83 and an accuracy of 65.22\n",
+    "    - This model was trained on the last 10 games of each team.\n",
+    "- The worst model was the **Linear Regression Model** with a CV error of 10.007 and an accuracy of 57.10\n",
+    "    - This model was trained on the last 1 game of each team.\n",
+    "- NOTE: All models that we tested had an accuracy over 50% meaning that they predicting the winners correctly more than half of the time.\n",
+    "    - Therefore, features such as the scores, points allowed, time of possession, first downs, total plays, and average gain for each team have some correlation with the winner of the game but may not be the best features to use to predict the exact scores of the teams.\n",
+    "- The CV errors for most of these models ranged from 9-10.\n",
+    "    - These values could be improved by either choosing different features or reducing the number of features used."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Predicting Model: **KNN Regressor Multi Output Model**"
    ]
   },
@@ -441,14 +463,20 @@
     "\n",
     "| Team   | Predicted Score | Actual Score |\n",
     "|--------|-----------------|--------------|\n",
-    "| DAL  |      27.06         |      TBD      |\n",
-    "| PHI |      24.68         |      TBD      |\n",
+    "| DAL |      27.06         |      33      |\n",
+    "| PHI |      24.68         |      13      |\n",
     "\n",
     "Here is a table of our predicted winner compared to the actual winner:\n",
     "\n",
     "| Predicted Winner | Actual Winner |\n",
     "|------------------|---------------|\n",
-    "| DAL | TBD |"
+    "| DAL | DAL |\n",
+    "\n",
+    "#### Results\n",
+    "\n",
+    "It looks like our model correctly predicted who was going to win each of these two games, however, the points values were definitely off. This means that the features we used to build the model (i.e. last 5 games average net yards for both teams, last 5 games average first downs for both teams, last 5 games time of possession for both teams, last 5 games total plays for both teams, and last 5 games points scored/allowed for both teams) definitely helped to predict the winner at a somewhat high accuracy, but was not as useful to predict the exact scores for the games.\n",
+    "\n",
+    "We would definitely need to consider more features and variables in order to predict the winner at a higher accuracy as well as the exact point totals such as weather, key player injuries, play types/schemes, etc. This is maybe something to consider for the future if we wanted to improve our model."
    ]
   }
  ],
