--- a/project/phase4/exec_summary.ipynb
+++ b/project/phase4/exec_summary.ipynb
@@ -195,7 +195,7 @@
    "source": [
     "- Total Scores by Year: created this to see how the total scores have changed throughout the years\n",
     "\n",
-    "![Total Scores by Year](../images/box_score_total_scores.png)"
+    "![Total Scores by Year](./images/box_score_total_scores.png)"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "source": [
     "- Distribution of Scores: shows the distribution of scores for home teams\n",
     "\n",
-    "![Distribution of Scores](../images/game_data_dist_home.png)"
+    "![Distribution of Scores](./images/game_data_dist_home.png)"
    ]
   },
   {
@@ -213,7 +213,7 @@
    "source": [
     "- Chiefs scoring over the Seasons for home and away games\n",
     "\n",
-    "![Chiefs scoring over the Seasons for home and away games](../images/game_data_chiefs.png)"
+    "![Chiefs scoring over the Seasons for home and away games](./images/game_data_chiefs.png)"
    ]
   },
   {
@@ -250,7 +250,7 @@
     "    - For the scoring, we chose the negative mean squared error, since we wanted to minimize the error.\n",
     "    - We used 10 folds for the cross validation, but we intend to model folds vs error to see if we can get a better k value.\n",
     "\n",
-    "![KNN Regressor](../images/k.png)\n",
+    "![KNN Regressor](./images/k.png)\n",
     "\n",
     "- After getting the best k value of 10 with the manhattan distance metric as the best metric, we trained the model on the training data.\n",
     "- We then used the model to predict the outcome of the test data.\n",
@@ -402,7 +402,7 @@
     "\n",
     "Here are the the 5 best and 5 worst configurations for our models in the final dataframe:\n",
     "\n",
-    "![Best Model Configurations](../images/results_df.png)\n"
+    "![Best Model Configurations](./images/results_df.png)\n"
    ]
   },
   {
